src/test/deca/context/invalid/class/heritage/inherit_boolean.deca
// Description:
//    Déclaration de classe héritant de boolean
//
// Resultats:
//    undefined supeclass
// 
// Historique:
//    cree le 01/01/2016

class C extends boolean {

}

{

}
